<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditPersonalInfo"
    android:orientation="vertical"
    android:background="@color/white">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/backButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="20dp"
        android:drawableLeft="@drawable/baseline_arrow_back_ios_24"
        android:padding="20dp"
        android:text="個人檔案"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:stateListAnimator="@null"
        android:background="@color/white"/>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="30dp"
            android:paddingBottom="90dp"
            android:layout_marginHorizontal="20dp"
            android:orientation="vertical">


        <ImageView
            android:id="@+id/editUserImage"
            android:background="@drawable/grey_circle"
            android:padding="10dp"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="18.0dp"
            android:layout_marginBottom="25dp"
            android:src="@drawable/baseline_person_24" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="18.0dp"
            android:text="@string/name"
            android:textColor="@android:color/black"
            android:textSize="15.0sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="text"
            android:minWidth="25dp"
            android:minHeight="25dp"
            android:textColor="@android:color/black"
            android:textSize="20.0sp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="18.0dp"
            android:layout_marginTop="20.0dp"
            android:text="@string/house_phone"
            android:textColor="@android:color/black"
            android:textSize="15.0sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/editHousePhone"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="phone"
            android:textColor="@android:color/black"
            android:textSize="20.0sp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="18.0dp"
            android:layout_marginTop="20.0dp"
            android:text="@string/phone_string"
            android:textColor="@android:color/black"
            android:textSize="15.0sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/editPhoneNo"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="phone"
            android:textColor="@android:color/black"
            android:textSize="20.0sp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="18.0dp"
            android:layout_marginTop="20.0dp"
            android:text="@string/companyAddress"
            android:textColor="@android:color/black"
            android:textSize="15.0sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/editCompanyAddress"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="text"
            android:minWidth="25dp"
            android:minHeight="25dp"
            android:textColor="@android:color/black"
            android:textSize="20.0sp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="23.0dp"
            android:layout_marginTop="20.0dp"
            android:text="@string/prompt_email"
            android:textColor="@android:color/black"
            android:textSize="15.0sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="text"
            android:minWidth="25dp"
            android:minHeight="25dp"
            android:textColor="@android:color/black"
            android:textSize="20.0sp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/saveInfo_button"
        android:layout_width="94.9dp"
        android:layout_height="56.3dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="17dp"
        android:background="@drawable/dark_gray_button_back"
        android:layout_gravity="end"
        android:text="@string/save_string"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold" />
</LinearLayout>
</ScrollView>
</LinearLayout>