<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/white"
    tools:context=".OrderInfo">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/backButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:contentDescription="TODO"
        android:layout_marginRight="300dp"
        android:padding="20dp"
        android:drawableLeft="@drawable/baseline_arrow_back_ios_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:stateListAnimator="@null"
        android:background="@color/white"/>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_marginTop="60dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="18dp"
            android:paddingBottom="90dp">

            <TextView
                android:id="@+id/orderInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoSizeTextType="uniform"
                android:maxLines="1"
                android:text="訂單資料"
                android:textColor="@color/black"
                android:layout_marginBottom="25dp"
                android:textSize="35sp"
                android:textStyle="bold" />
        <GridLayout
            android:id="@+id/TableLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:padding="15dp"
            android:background="@android:color/white"
            android:backgroundTint="#ffececec"
            android:columnCount="2"
            android:rowCount="5"
            app:backgroundTint="#ffffffff">

            <TextView
                android:id="@+id/customer_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="30dp"
                android:layout_gravity="start|center"
                android:text="@string/CustomerName"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ff757575"
                android:autoSizeTextType="uniform"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/changable_customer_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="30dp"
                android:layout_gravity="start|center"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ff757575"
                android:autoSizeTextType="uniform" />

            <TextView
                android:id="@+id/contactNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="30dp"
                android:layout_gravity="start|center"
                android:layout_marginTop="6.0dp"
                android:text="@string/contactNo"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ff757575"
                android:autoSizeTextType="uniform"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/changable_contactNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="30dp"
                android:layout_gravity="start|center"
                android:layout_marginTop="6dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ff757575"
                android:autoSizeTextType="uniform" />

            <TextView
                android:id="@+id/deliveryAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="30dp"
                android:layout_gravity="start|center"
                android:layout_marginTop="6.0dp"
                android:text="@string/deliveryAddress"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ff757575"
                android:autoSizeTextType="uniform"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/changable_deliveryAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="30dp"
                android:layout_gravity="start|center"
                android:layout_marginTop="6dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ff757575"
                android:autoSizeTextType="uniform"/>

            <TextView
                android:id="@+id/gasID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="30dp"
                android:layout_gravity="start|center"
                android:layout_marginTop="6.0dp"
                android:text="預期配送時間 : "
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ff757575"
                android:autoSizeTextType="uniform"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ordertime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="30dp"
                android:layout_gravity="start|center"
                android:layout_marginTop="6dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ff757575"
                android:autoSizeTextType="uniform" />

            <TextView
                android:id="@+id/gasQty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="30dp"
                android:layout_gravity="start|center"
                android:text="@string/gasQuantity"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ff757575"
                android:autoSizeTextType="uniform"
                android:textStyle="bold"
                android:layout_marginTop="6dp"
                />

            <TextView
                android:id="@+id/changable_gasQTY"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="30dp"
                android:layout_gravity="start|center"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ff757575"
                android:autoSizeTextType="uniform"
                android:layout_marginEnd="20dp"/>

        </GridLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:background="#FFFFCC"
            android:orientation="vertical"
            android:rowCount="2">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="30dp"
                android:layout_gravity="left"
                android:text="訂購瓦斯桶"
                android:layout_marginLeft="10dp"
                android:autoSizeTextType="uniform"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                />
            <TextView
                android:layout_gravity="left"
                android:text="請按下面的列表來進行換桶流程, 以一桶為單位"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_marginBottom="5dp"
                />

        </GridLayout>

        <com.glotech.smartgasmasterapp.listViewAdjust
            android:id="@+id/list_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animationCache="false"
            android:divider="@null"
            android:scrollingCache="false"
            android:smoothScrollbar="true" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/confirmOrder"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="60dp"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:background="@drawable/main_blue_button_back"
            android:shadowColor="#ff2c2c2c"
            android:text="@string/confirmExchange"
            android:textColor="#ffffff"
            android:textSize="20.0sp"
            android:textStyle="bold"/>
    </LinearLayout>


</ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>