<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewGasRegister"
    android:background="@color/white">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/backButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:contentDescription="TODO"
        android:layout_marginRight="300dp"
        android:padding="20dp"
        android:drawableLeft="@drawable/baseline_arrow_back_ios_24"
        android:stateListAnimator="@null"
        android:background="@color/white"/>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_marginTop="60dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="90dp">

        <TextView
            android:id="@+id/newReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:paddingHorizontal="18dp"
            android:text="瓦斯桶註冊"
            android:textColor="@color/black"
            android:layout_marginBottom="25dp"
            android:textSize="35sp"
            android:textStyle="bold" />

        <androidx.camera.view.PreviewView
            android:id="@+id/newScanner"
            android:layout_width="match_parent"
            android:layout_height="272dp"
            android:layout_marginBottom="2dp"
            android:backgroundTint="@android:color/white"
            android:scaleType="fitCenter" />

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="18dp"
            android:paddingBottom="90dp">

        <TextView
            android:id="@+id/manuallyEnterCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enterCode"
            android:textColor="@android:color/black"
            android:textSize="20.0sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"/>


        <EditText
            android:id="@+id/mannuallyEnterGasCode"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="#ffeeeeee"
            android:gravity="center"
            android:hint="@string/enterCode"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="50dp"
            android:layout_marginBottom="20dp"
            />


        <TextView
            android:id="@+id/gas_empty_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/gas_empty_weight"
            android:textColor="@android:color/black"
            android:textSize="20.0sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/input_gas_empty_weight"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="#ffeeeeee"
            android:gravity="center"
            android:layout_gravity="center"
            android:hint="@string/input_gas_empty_weight"
            android:layout_marginHorizontal="50dp"
            />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="45dp"
            >

            <TextView
                android:id="@+id/NewText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="新瓦斯桶 ID:"
                android:textAlignment="textEnd"
                android:textColor="@android:color/black"
                android:textSize="20.0sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/changeableNewID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textColor="@android:color/black"
                android:textSize="20.0sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="45dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="瓦斯空桶重 :"
                android:textAlignment="textEnd"
                android:textColor="@android:color/black"
                android:textSize="20.0dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/changeableNewVolume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="20.0sp"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/confirm_NewScan_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="70dp"
            android:layout_weight="1"
            android:background="@drawable/main_blue_button_back"
            android:text="@string/confirm_gas_register"
            android:textColor="#ffffffff"
            android:textSize="20.0sp"
            android:textStyle="bold" />

            <TextView
                android:layout_width="20dp"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/skipRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="70dp"
                android:layout_weight="1"
                android:background="@drawable/main_blue_button_back"
                android:text="跳過註冊"
                android:textColor="#ffffffff"
                android:textSize="20.0sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>
        </LinearLayout>


</ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>

